--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -9,8 +9,8 @@
  		"acceptedExtentions": "選択可能なファイル: gif/png/jpeg/jpg"
     },
     "botMessage":{
- 		"sendingDropFiles": "ドロップされたファイルをサーバーに転送しています。",
-  		"sendFilesSuccess": "ドロップされたファイルを正常にサーバーに転送しました。",
- 		"sendFilesFailed": "ドロップされたファイルのサーバーへの転送に失敗しました。"
+ 		"sendingDropFiles": "ドロップされたファイルを中間サーバーに転送しています。",
+  		"sendFilesSuccess": "ドロップされたファイルを正常に中間サーバーに転送しました。",
+ 		"sendFilesFailed": "ドロップされたファイルの中間サーバーへの転送に失敗しました。"
  	}
 }
