Increase allowed drop files, Sending a blind message to CAI to make it understand the intent & langauge, Setting no.3 message as ssoUserId etc.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,7 +11,7 @@
  	},
  	"dropArea":{
  		"areaMessage": "Select files by clicking here, or drop files to here directly.",
- 		"acceptedExtentions": "If it is rejected, please make a zip file to include it, then drop the zip file."
+ 		"acceptedExtentions": "If it is rejected, please attach the file after the creation of incident."
  	},
  	"botMessage":{
  		"sendingDropFiles": "Sending dropped files to the middleware server.",
