--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -11,7 +11,7 @@
  	},
  	"dropArea":{
  		"areaMessage": "ここをクリックしてファイルを選択するか、直接ファイルをここにドロップしてください。",
- 		"acceptedExtentions": "もしファイルが拒否された場合は、Zipファイルにまとめて、それをドロップしてください。"
+ 		"acceptedExtentions": "もしファイルが拒否された場合は、インシデントが作成されてからそこに直接添付してください。"
     },
     "botMessage":{
  		"sendingDropFiles": "ドロップされたファイルを中間サーバーに転送しています。",
