Don't send the first message if the cookie (credentials) exists, because all previous messages are returned by CAI, even if the browser is reloaded. In this case, sending the first message is weird. Sending the auto message with the memory "ssoUserId", otherwise CAI does not response accordingly (it should ask whether ssoUserId is your user id or not).

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,7 +7,8 @@
  	},
  	"message":{
  		"forLang&Intent": "[Auto Transmitted Message] This chat is handled in English based on the browser locale.",
- 		"reset": "Please reset the chat contents."
+ 		"reset": "Please reset the chat contents.",
+ 		"askUserID": "Please tell me your SAP User ID"
  	},
  	"dropArea":{
  		"areaMessage": "Select files by clicking here, or drop files to here directly.",
