--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -7,7 +7,8 @@
     },
     "message":{
     	"forLang&Intent": "[自動送信メッセージ] ブラウザ言語から判断して日本語で処理するようにします。",
- 		"reset": "チャット内容をリセットしてください。"
+ 		"reset": "チャット内容をリセットしてください。",
+ 		"askUserID": "あなたの SAP User ID を教えてください"
  	},
  	"dropArea":{
  		"areaMessage": "ここをクリックしてファイルを選択するか、直接ファイルをここにドロップしてください。",
